--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,25 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.bunny.net/css?family=Nunito');
 
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// bootstrap
+@import "~bootstrap/scss/bootstrap";
+@import url("https://fonts.bunny.net/css?family=Nunito"); // Fonts
+@import url('https://fonts.bunny.net/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// bootstrap
+@import "~bootstrap/scss/bootstrap";
+@import "variables"; // Fonts
+@import url('https://fonts.bunny.net/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// bootstrap
+@import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap";
