--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,25 +1,8 @@
 // Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
 @import 'variables';
 
-// bootstrap
-@import "~bootstrap/scss/bootstrap";
-@import url("https://fonts.bunny.net/css?family=Nunito"); // Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
-
-// Variables
-@import 'variables';
-
-// bootstrap
-@import "~bootstrap/scss/bootstrap";
-@import "variables"; // Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
-
-// Variables
-@import 'variables';
-
-// bootstrap
-@import "~bootstrap/scss/bootstrap";
-@import "~bootstrap/scss/bootstrap";
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
